--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -22,6 +22,6 @@
     }
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false
+    "enableI18nLegacyMessageIdFormat": true
   }
 }
